# seqtools

./: Cargo.toml  README.md  build.rs
my_seqio/: Cargo.toml
my_seqio/src/: lib.rs  main.rs  reader.rs  record.rs  tests.rs  writer.rs
my_seqio/src/tests/: mod.rs
my_seqio/tests/: mod.rs
src/: alignment_start_histogram.rs  cli.rs  deinterleave_seqs.rs  exponential_prefixes.rs  fastq_streams.rs  histogram.rs  interleave_seqs.rs  kmer_intersection.rs  lib.rs  main.rs  revcomp.rs  split_for_themisto_experiment.rs  trim_adapters.rs
tests/: cli.rs
