[package]
name = "seq_tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "revcomp"
path = "src/revcomp.rs"

[dependencies]

seq_io = "0.3.1"
flate2 = "1.0.24"
clap = { version = "4.0.26", features = ["derive"] }
