[package]
name = "seq_tools"
version = "0.1.1"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "seqtools"
path = "src/main.rs"

[[bin]]
name = "revcomp"    
path = "src/revcomp.rs"

[[bin]]
name = "alignment_start_histogram"
path = "src/alignment_start_histogram.rs"

[[bin]]
name = "exponential_prefixes"
path = "src/exponential_prefixes.rs"

[[bin]]
name = "split_for_themisto_experiment"
path = "src/split_for_themisto_experiment.rs"

[dependencies]

flate2 = "1.0.24"
clap = { version = "4.0.26", features = ["derive"] }
clap_complete = "4.0.6"
rand = "*"
jseqio = { path = "jseqio" }
sha2 = "0.10.7"
generic-array = "*"

[build-dependencies]

flate2 = "1.0.24"
clap = { version = "4.0.26", features = ["derive"] }
clap_complete = "4.0.6"
jseqio = { path = "jseqio" }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"
tempfile = "3.3.0"
